[gd_scene load_steps=6 format=3 uid="uid://2ql7dquewkrt"]

[ext_resource type="Script" path="res://Editor/LevelEditor.gd" id="1_fahqc"]
[ext_resource type="PackedScene" uid="uid://pkpxqi8ix78w" path="res://Editor/Scenes/level_specific.tscn" id="2_anycx"]
[ext_resource type="Script" path="res://Editor/EditTileWindow.gd" id="3_qhnjv"]
[ext_resource type="TileSet" uid="uid://c1wm0jqjtx2wm" path="res://Editor/Placeholder Assets/tileset.tres" id="4_e5o7m"]
[ext_resource type="Script" path="res://Editor/Classes/TileMapFromEditor.gd" id="4_wxrm2"]

[node name="LevelEditor" type="Node2D"]
script = ExtResource("1_fahqc")

[node name="UI" type="CanvasLayer" parent="."]
layer = 128

[node name="Level Specific" parent="UI" instance=ExtResource("2_anycx")]

[node name="Info" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Info"]
layout_mode = 2
offset_right = 182.0
offset_bottom = 80.0
text = "Layer:
Global mouse position:
Mouse position on grid:
"

[node name="EditTileWindow" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_qhnjv")

[node name="BG" type="Panel" parent="UI/EditTileWindow"]
layout_mode = 2
anchor_left = 0.778
anchor_top = 0.025
anchor_right = 0.778
anchor_bottom = 0.025
offset_left = -0.256042
offset_top = -0.200001
offset_right = 239.744
offset_bottom = 431.8

[node name="ScrollContainer" type="ScrollContainer" parent="UI/EditTileWindow"]
layout_mode = 2
anchor_left = 0.778
anchor_top = 0.025
anchor_right = 0.778
anchor_bottom = 0.025
offset_left = -0.256042
offset_top = -0.200001
offset_right = 239.744
offset_bottom = 431.8

[node name="Canvas" type="CanvasLayer" parent="."]
layer = -128

[node name="EditorCanvas" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="TileMapFromEditor" type="TileMap" parent="."]
tile_set = ExtResource("4_e5o7m")
format = 2
script = ExtResource("4_wxrm2")

[connection signal="gui_input" from="Canvas/EditorCanvas" to="." method="_on_editor_canvas_gui_input"]
